add_executable(day01 day01.cpp)
target_compile_features(day01 PRIVATE cxx_std_14)

add_executable(day02 day02.cpp)
target_compile_features(day02 PRIVATE cxx_std_14)

add_executable(day03 day03.cpp)
target_compile_features(day03 PRIVATE cxx_std_14)

add_executable(day04 day04.cpp)
target_compile_features(day04 PRIVATE cxx_std_14)

add_executable(day05 day05.cpp)
target_compile_features(day05 PRIVATE cxx_std_14)
